Creating global variables
This is such that functions can be toggled off by setting a variable to '0; in the global variable list, instead of hunting for them in the configs.

--- a/STL_Config_Instructions/v1.1 - Alpha/Klipper_Config/macro-general.cfg
+++ b/STL_Config_Instructions/v1.1 - Alpha/Klipper_Config/macro-general.cfg
@@ -19,7 +19,6 @@ gcode:
     {% set center_y = printer["gcode_macro _home"].yh|float %}
     {% set toolchange_z = printer['toolchanger'].params_max_z|float %}
     
-    ### Check if axes are homed ###
     {% if "xyz" not in printer.toolhead.homed_axes %}
         G28
     {% endif %}
@@ -27,11 +26,19 @@ gcode:
     G0 X{center_x} Y{center_y} Z{toolchange_z} F10000    # Place toolhead centre-front-250mm
 
 #--------------------------------------------------------------------
-[gcode_macro A_HEAT_SOAK_40]
+[gcode_macro A_HEAT_SOAK]
 gcode:
-    RESPOND TYPE=echo MSG='Chamber Heat Soak...'
-    SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET=100
-    TEMPERATURE_WAIT SENSOR="temperature_sensor Chamber" MINIMUM=40
+    {% if printer['gcode_macro _global_variable'].heatsoak_temp > 0.0 %}
+        {% set temp = printer['gcode_macro _global_variable'].heatsoak_temp|float %}
+        RESPOND TYPE=echo MSG='Chamber Heat Soaking...'
+        SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET=100
+        SET_FAN_SPEED FAN=fan_chamber_heater SPEED=1
+        SET_FAN_SPEED FAN=fan_nevermore_stealthmax SPEED=0.80
+        TEMPERATURE_WAIT SENSOR="temperature_sensor Chamber" MINIMUM={temp}
+        M400
+        SET_FAN_SPEED FAN=fan_nevermore_stealthmax SPEED=0.30
+        RESPOND TYPE=echo MSG='Chamber is {temp}C...'
+    {% endif %}
 
 #--------------------------------------------------------------------
 [gcode_macro UNLOAD_FILAMENT]
@@ -81,3 +88,16 @@ gcode:
     {% endif %}
     G0 X175 Y175 Z1 F3600         # Centre the toolhead
     PROBE_CALIBRATE
+
+#--------------------------------------------------------------------
+[gcode_macro A_FAN_TOGGLE]
+gcode:
+    {% if printer['fan_generic fan_nevermore_stealthmax'].speed == 0.0 %}
+        RESPOND TYPE=echo MSG='{"Fan on..."}'
+        SET_FAN_SPEED FAN=fan_chamber_heater SPEED=1.00
+        SET_FAN_SPEED FAN=fan_nevermore_stealthmax SPEED=0.75
+    {% else %}
+        RESPOND TYPE=echo MSG='{"Fan off..."}'
+        SET_FAN_SPEED FAN=fan_chamber_heater SPEED=0.00
+        SET_FAN_SPEED FAN=fan_nevermore_stealthmax SPEED=0.00
+    {% endif %}
