--- a/STL_Config_Instructions/v1.1 - Alpha/Klipper_Config/toolchanger-nozzle_clean.cfg
+++ b/STL_Config_Instructions/v1.1 - Alpha/Klipper_Config/toolchanger-nozzle_clean.cfg
@@ -3,89 +3,113 @@
 #####################################################################
 [gcode_macro _SCRUB]
 gcode:
-    {% set cle_x = printer['gcode_macro _CLEAN'].clean_x|float %}
-    {% set cle_y = printer['toolchanger'].params_close_y|float %}
-    M400
-    G1 F30000
-    M400
-    {% for n in range(4) %}
-        G1 X{cle_x + 3} Y{cle_y - 10}
-        G1 X{cle_x - 3} Y{cle_y - 20}
-        G1 X{cle_x + 3} Y{cle_y - 30}
-        G1 X{cle_x - 3} Y{cle_y - 35}
-        G1 X{cle_x + 3} Y{cle_y - 35}
-        G1 X{cle_x - 3} Y{cle_y - 30}
-        G1 X{cle_x + 3} Y{cle_y - 20}
-        G1 X{cle_x - 3} Y{cle_y - 10}
-        G1 X{cle_x - 3} Y{cle_y - 35}
-        G1 X{cle_x + 3} Y{cle_y - 10}
-        G1 X{cle_x + 3} Y{cle_y - 35}
-        G1 X{cle_x + 0} Y{cle_y - 10}
-    {% endfor %}
-    M400
-    G1 F9000
-    M400
+    {% if "xyz" in printer.toolhead.homed_axes and printer['quad_gantry_level'].applied==True and printer['gcode_macro _global_variable'].clean_dock_x>0 %}
+        {% set cle_x = printer['gcode_macro _global_variable'].clean_dock_x %}
+        {% set cle_y = printer['toolchanger'].params_close_y|float %}
+        G1 F30000
+        M400
+        {% for n in range(4) %}
+            G1 X{cle_x + 3} Y{cle_y - 10}
+            G1 X{cle_x - 3} Y{cle_y - 20}
+            G1 X{cle_x + 3} Y{cle_y - 30}
+            G1 X{cle_x - 3} Y{cle_y - 35}
+            G1 X{cle_x + 3} Y{cle_y - 35}
+            G1 X{cle_x - 3} Y{cle_y - 30}
+            G1 X{cle_x + 3} Y{cle_y - 20}
+            G1 X{cle_x - 3} Y{cle_y - 10}
+            G1 X{cle_x - 3} Y{cle_y - 35}
+            G1 X{cle_x + 3} Y{cle_y - 10}
+            G1 X{cle_x + 3} Y{cle_y - 35}
+            G1 X{cle_x + 0} Y{cle_y - 10}
+        {% endfor %}
+    {% else %}
+        {% if "xyz" not in printer.toolhead.homed_axes %}
+            RESPOND TYPE=error MSG='Printer is not HOMED...'
+        {% endif %}
+        {% if printer['quad_gantry_level'].applied == False %}
+            RESPOND TYPE=error MSG='Gantry is not LEVELED...'
+        {% endif %}
+        {% if printer['gcode_macro _global_variable'].clean_dock_x<=0 %}
+            RESPOND TYPE=error MSG='Cleaning dock is not configured...'
+        {% endif %}
+    {% endif %}
 
 ## ------------------------------------------------------------------
 [gcode_macro _CLEAN]
-variable_clean_temp: 200
-variable_clean_x: 175        # change this to specific dock set-up
 gcode:
-    M104 S{clean_temp}
-    
-    G1 X{clean_x} Y{printer['toolchanger'].params_safe_y} F9000
-    G1 Y{printer['toolchanger'].params_close_y}
-    
-    M400
-    STOP_TOOL_PROBE_CRASH_DETECTION
-    M400
-    TEMPERATURE_WAIT SENSOR='{printer['toolhead'].extruder}' MINIMUM={clean_temp-1}
-    M104 S0   
-    _SCRUB
-    _SCRUB
-    TEMPERATURE_WAIT SENSOR='{printer['toolhead'].extruder}' MAXIMUM={clean_temp-5}
-    _SCRUB
-    _SCRUB
-    TEMPERATURE_WAIT SENSOR='{printer['toolhead'].extruder}' MAXIMUM={clean_temp-10}
-    _SCRUB
-    _SCRUB
-    M400
-    START_TOOL_PROBE_CRASH_DETECTION
-    M400
-    
-    G1 X{clean_x} Y{printer['toolchanger'].params_safe_y} F9000
+    {% if "xyz" in printer.toolhead.homed_axes and printer['quad_gantry_level'].applied==True and printer['gcode_macro _global_variable'].clean_dock_x>0 %}
+        {% set clean_temp = printer['gcode_macro _global_variable'].clean_temp %}
+        {% set clean_x = printer['gcode_macro _global_variable'].clean_dock_x %}
+        M104 S{clean_temp}
+        G1 X{clean_x} Y{printer['toolchanger'].params_safe_y} F9000
+        G1 Y{printer['toolchanger'].params_close_y}
+        M400
+        STOP_TOOL_PROBE_CRASH_DETECTION
+        M400
+        TEMPERATURE_WAIT SENSOR='{printer['toolhead'].extruder}' MINIMUM={clean_temp-1}
+        M104 S0   
+        _SCRUB
+        _SCRUB
+        TEMPERATURE_WAIT SENSOR='{printer['toolhead'].extruder}' MAXIMUM={clean_temp-5}
+        _SCRUB
+        _SCRUB
+        TEMPERATURE_WAIT SENSOR='{printer['toolhead'].extruder}' MAXIMUM={clean_temp-10}
+        _SCRUB
+        _SCRUB
+        G1 X{clean_x} Y{printer['toolchanger'].params_safe_y} F9000
+    {% else %}
+        {% if "xyz" not in printer.toolhead.homed_axes %}
+            RESPOND TYPE=error MSG='Printer is not HOMED...'
+        {% endif %}
+        {% if printer['quad_gantry_level'].applied == False %}
+            RESPOND TYPE=error MSG='Gantry is not LEVELED...'
+        {% endif %}
+        {% if printer['gcode_macro _global_variable'].clean_dock_x<=0 %}
+            RESPOND TYPE=error MSG='Cleaning dock is not configured...'
+        {% endif %}
+    {% endif %}
 
 # -------------------------------------------------------------
 [gcode_macro _CLEAN_MID_PRINT]
 gcode:
-    ## Get to toolchange height -------------------------------
-    {% if printer.toolhead.position[2] < printer['toolchanger'].params_min_z %}
-        G0 Z{printer['toolchanger'].params_min_z} F9000
-    {% endif %}
-    ## Get to cleaning dock -----------------------------------
-    G1 X{printer['gcode_macro _CLEAN'].clean_x} Y{printer['toolchanger'].params_safe_y} F9000
-    G1 Y{printer['toolchanger'].params_close_y}
-    M400
-    STOP_TOOL_PROBE_CRASH_DETECTION
-    M400
-    _SCRUB
-    M400
-    START_TOOL_PROBE_CRASH_DETECTION
-    M400
-    G1 X{printer['gcode_macro _CLEAN'].clean_x} Y{printer['toolchanger'].params_safe_y} F9000
-
+    {% if "xyz" in printer.toolhead.homed_axes and printer['quad_gantry_level'].applied==True and printer['gcode_macro _global_variable'].clean_dock_x>0 %}
+        {% set clean_x = printer['gcode_macro _global_variable'].clean_dock_x %}
+        ## Get to toolchange height -------------------------------
+        {% if printer.toolhead.position[2] < printer['toolchanger'].params_min_z %}
+            G0 Z{printer['toolchanger'].params_min_z} F9000
+        {% endif %}
+        ## Get to cleaning dock -----------------------------------
+        G1 X{clean_x} Y{printer['toolchanger'].params_safe_y} F9000
+        G1 Y{printer['toolchanger'].params_close_y}
+        M400
+        STOP_TOOL_PROBE_CRASH_DETECTION
+        M400
+        _SCRUB
+        M400
+        START_TOOL_PROBE_CRASH_DETECTION
+        M400
+        G1 X{clean_x} Y{printer['toolchanger'].params_safe_y} F9000
+    {% else %}
+        {% if "xyz" not in printer.toolhead.homed_axes %}
+            RESPOND TYPE=error MSG='Printer is not HOMED...'
+        {% endif %}
+        {% if printer['quad_gantry_level'].applied == False %}
+            RESPOND TYPE=error MSG='Gantry is not LEVELED...'
+        {% endif %}
+        {% if printer['gcode_macro _global_variable'].clean_dock_x<=0 %}
+            RESPOND TYPE=error MSG='Cleaning dock is not configured...'
+        {% endif %}
+    {% endif %}
     
 #####################################################################
 #                        Working
 #####################################################################
 [gcode_macro CLEAN_NOZZLE]
 gcode:
-    {% set tools = printer.toolchanger.tool_numbers %}
-    {% set clean_temp = printer["gcode_macro _CLEAN"].clean_temp %}
-    
-    {% if "xyz" in printer.toolhead.homed_axes %}       # Check if axes are homed
+    {% if "xyz" in printer.toolhead.homed_axes and printer['quad_gantry_level'].applied==True and printer['gcode_macro _global_variable'].clean_dock_x>0 %}
+        {% set tools = printer.toolchanger.tool_numbers %}
+        {% set clean_temp = printer['gcode_macro _global_variable'].clean_temp %}
         G90
-
         ## Get to toolchange height --------------------------------
         {% if printer.toolhead.position[2] < printer['toolchanger'].params_min_z %}
             G0 Z{printer['toolchanger'].params_min_z|float} F9000
@@ -93,7 +117,6 @@ gcode:
         {% if printer.toolhead.position[2] > printer['toolchanger'].params_max_z %}
             G1 Z{printer['toolchanger'].params_max_z|float} F9000
         {% endif %}
-
         ## Clean selected tool -------------------------------------
         {% if params.TOOL != null %}
             RESPOND TYPE=echo MSG='Clean T{params.TOOL}...'
@@ -111,8 +134,15 @@ gcode:
                 _CLEAN
             {% endfor %}
         {% endif %}
-        
         G1 X{printer['gcode_macro _home'].xh} Y{printer['gcode_macro _home'].yh} F9000
     {% else %}
-        RESPOND TYPE=echo MSG='Printer not Homed...'
+        {% if "xyz" not in printer.toolhead.homed_axes %}
+            RESPOND TYPE=error MSG='Printer is not HOMED...'
+        {% endif %}
+        {% if printer['quad_gantry_level'].applied == False %}
+            RESPOND TYPE=error MSG='Gantry is not LEVELED...'
+        {% endif %}
+        {% if printer['gcode_macro _global_variable'].clean_dock_x<=0 %}
+            RESPOND TYPE=error MSG='Cleaning dock is not configured...'
+        {% endif %}
     {% endif %}
