--- a/STL_Config_Instructions/v1.1 - Alpha/Klipper_Config/toolchanger.cfg
+++ b/STL_Config_Instructions/v1.1 - Alpha/Klipper_Config/toolchanger.cfg
@@ -1,8 +1,12 @@
 #--------------------------------------------------------------------
 [tool_probe_endstop]
 crash_gcode:
-    RESPOND TYPE=error MSG='Tool not detected, expected {printer.toolchanger.tool_number}. Pausing the print.' 
-    BASE_PAUSE
+    {% if printer["gcode_macro _global_variable"].printing|int == 1 %}
+        RESPOND TYPE=error MSG='Tool not detected, expected {printer.toolchanger.tool_number}. Pausing the print.'
+        BASE_PAUSE
+    {% else %}
+        RESPOND TYPE=error MSG='Tool not detected, expected {printer.toolchanger.tool_number}'
+    {% endif %}
     TURN_OFF_HEATERS
 
 #--------------------------------------------------------------------
@@ -11,26 +15,28 @@ t_command_restore_axis: Z
 params_safe_y: 120
 params_close_y: 50
 params_min_z: 40
-params_max_z: 250
+params_max_z: 240
 params_fast_speed: 30000   # Speed conversion:
-params_path_speed: 8000    # 1500=40mm/s
+params_path_speed: 7000    # 1500=40mm/s
 
 params_type = 'sb_misschanger'
 params_sb_misschanger_path: [
-                             {'x':0,        'y':0,       'f':1.00},
-                             {'x':0,        'y':-50,     'f':0.80},
-                             {'x':0,        'y':-45,     'f':0.80},    # Wiggle...
-                             {'x':0,        'y':-55,     'f':0.60},    # ...wingle
-                             {'x':0,        'y':-50,     'f':0.50},    # Wiggle...
-                             {'x':0,        'y':-60,     'f':0.40},    # ...wingle
-                             {'x':0,        'y':-55,     'f':0.38},    # Wiggle...
-                             {'x':0,        'y':-65,     'f':0.36},    # ...wingle
-                             {'x':0,        'y':-60,     'f':0.34},    # Wiggle...
-                             {'x':0,        'y':-70,     'f':0.32},    # ...wingle
-                             {'x':0,        'y':-80,     'f':0.30},
-                             {'x':-6.0,     'y':-80,     'f':0.20},  
-                             {'x':-6.0,     'y':-70,     'f':0.30},
-                             {'x':-6.0,     'y':-40,     'f':1.00}
+                             {'x':0,        'y':0,       'f':1.00,    'd':1},
+                             {'x':0,        'y':-50,     'f':0.80,    'd':1},
+                             {'x':0,        'y':-60,     'f':0.70,    'd':0},    # Wiggle...
+                             {'x':0,        'y':-55,     'f':0.65,    'd':0},    # ...wingle
+                             {'x':0,        'y':-65,     'f':0.60,    'd':1},    # Wiggle...
+                             {'x':0,        'y':-60,     'f':0.55,    'd':0},    # ...wingle
+                             {'x':0,        'y':-70,     'f':0.50,    'd':0},    # Wiggle...
+                             {'x':0,        'y':-65,     'f':0.45,    'd':0},    # ...wingle
+                             {'x':0,        'y':-75,     'f':0.40,    'd':0},    # Wiggle...
+                             {'x':0,        'y':-70,     'f':0.35,    'd':0},    # ...wingle
+                             {'x':0,        'y':-77,     'f':0.30,    'd':0},    # Wiggle...
+                             {'x':0,        'y':-72,     'f':0.30,    'd':0},    # ...wingle
+                             {'x':0,        'y':-80,     'f':0.30,    'd':1},
+                             {'x':-6.0,     'y':-80,     'f':0.20,    'd':1},  
+                             {'x':-6.0,     'y':-70,     'f':0.30,    'd':1},
+                             {'x':-6.0,     'y':-40,     'f':1.00,    'd':1}
                             ]
 
 ## Default shaper params
@@ -74,7 +80,7 @@ after_change_gcode:
       SET_INPUT_SHAPER SHAPER_FREQ_X={params_input_shaper_freq_x} SHAPER_FREQ_Y={params_input_shaper_freq_y} SHAPER_TYPE_X={params_input_shaper_type_x} SHAPER_TYPE_Y={params_input_shaper_type_y} DAMPING_RATIO_X={params_input_shaper_damping_ratio_x} DAMPING_RATIO_Y={params_input_shaper_damping_ratio_y}
     {% endif %}
 
-    {% if printer["gcode_macro PRINT_START"].printing|int == 0 %}
+    {% if printer["gcode_macro _global_variable"].printing|int == 0 %}
         STOP_TOOL_PROBE_CRASH_DETECTION
     {% endif %}
 
@@ -102,7 +108,9 @@ dropoff_gcode:
     
     ############## Run the path ###############################
     {% for pos in path %}
-        G0 X{x + pos['x']|float} Y{y + pos['y']|float} F{tool.params_path_speed|float * (pos.get('f', 1.0)|float) }
+        {% if pos['d']|int == 1 %}
+            G0 X{x + pos['x']|float} Y{y + pos['y']|float} F{tool.params_path_speed|float * (pos.get('f', 1.0)|float) }
+        {% endif %}
     {% endfor %}
     M400
     RESPOND TYPE=echo MSG='Dropped off {tool.name}...'
@@ -113,8 +121,8 @@ pickup_gcode:
     {% set z = tool.params_park_z|float %}
     {% set fast = tool.params_fast_speed|float %}
     {% set path = tool['params_' ~ tool.params_type ~ '_path'] %}
-    {% set wx = printer["gcode_macro _WIPE_TOWER_LOCATION"].wx|float %}
-    {% set wy = printer["gcode_macro _WIPE_TOWER_LOCATION"].wy|float %}
+    {% set wx = printer["gcode_macro _global_variable"].wipe_x|float %}
+    {% set wy = printer["gcode_macro _global_variable"].wipe_y|float %}
     
     ##############  Fast to the last point  ################
     G90
@@ -151,13 +159,13 @@ pickup_gcode:
                 {% endif %}
             {% endif %}
             {% if 'Z' in restore_position %}
-                {% if wx > 0 and wy > tool.params_safe_y %}
+                {% if wx > 0 and wy > tool.params_safe_y and restore_position.Z > 0.3 %}
                     {% set macroparameter = "gcode_macro T" ~ tool.tool_number|string %}
                     {% if printer[macroparameter].material|int == 2 %}
                         RESPOND TYPE=echo MSG='Clean PETG Nozzle...'
                         _CLEAN_MID_PRINT
                     {% endif %}
-                    G0 X{wx - 1.0} Y{wy - 1.0} Z{restore_position.Z} F{fast}
+                    G0 X{wx - 0.4} Y{wy - 0.4} Z{restore_position.Z} F{fast}
                 {% else %}
                     G0 Z{restore_position.Z} F{fast}
                 {% endif %}
@@ -301,6 +309,7 @@ gcode:
 ####################################################################################
 #--------------------------------------------------------------------
 [gcode_macro A_CONFIG_TOGGLE]
+description: Toggle between the config with-dock and without-dock
 gcode:
     M400
     SAVE_CONFIG_MODE
@@ -308,45 +317,3 @@ gcode:
     TOGGLE_CONFIG_MODE
     M400
     FIRMWARE_RESTART
-
-#--------------------------------------------------------------------
-[gcode_macro A_TC_BURN_IN]
-variable_tcno: 1050    # 1 tool-change at every layer up to z = 210mm
-variable_noth: 3       # 3 tool-heads
-gcode:
-    ## Set up gantry ------------------------------------------------
-    {% if "xyz" not in printer.toolhead.homed_axes %}
-        G28
-    {% endif %}
-    {% if printer['quad_gantry_level'].applied == False %}
-        QUAD_GANTRY_LEVEL
-    {% endif %}
-    
-    # ## Heatsoak -----------------------------------------------------
-    # ## This is disable, as not all Voron printer have a chamber thermistor.
-    # ## And, it is very wasteful to heat up the chamber for so long.
-    # RESPOND TYPE=echo MSG='{"Chamber Heat Soak..."}'
-    # SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET=100
-    # TEMPERATURE_WAIT SENSOR="temperature_sensor Chamber" MINIMUM=40
-    
-    ## Burn in ------------------------------------------------------
-    {% set tcnr = (tcno*noth)|int %}                                           # set the number of tool-changes to be run
-    RESPOND TYPE=echo MSG='Test {tcnr} tool-changes...'
-    
-    {% for n in range(tcnr) %}
-        {% set nr = printer.toolchanger.tool_numbers|random %}                 # Set a random tool to pickup.
-        {% set hi = range(1,printer['toolchanger'].params_max_z|int)|random %} # Set a z height.
-        
-        RESPOND TYPE=echo MSG='Change No.: {n} | at {hi}mm ...'
-        G0 Z{hi} F1500                                                         # Travel to random z.
-        
-        {% if nr == printer.tool_probe_endstop.active_tool_number|int %}       # If the random tool selected is the active tool,
-            TEST_TOOL_DOCKING                                                  # then just test that dock.
-        {% else %}                                                             # Otherwise,
-            T{ nr }                                                            # pick up the random tool.
-        {% endif %}
-    {% endfor %}
-    
-    ## End note -----------------------------------------------------
-    RESPOND TYPE=echo MSG='Reliability test cleared. CONGRATULATION'
-    
