--- a/STL_Config_Instructions/v1.1 - Alpha/Klipper_Config/T2.cfg
+++ b/STL_Config_Instructions/v1.1 - Alpha/Klipper_Config/T2.cfg
@@ -1,35 +1,35 @@
 #####################################################################
 ## 	                MCU
 #####################################################################
-[mcu EBBCan0]
+[mcu EBBCan2]
 # ~/klippy-env/bin/python ~/klipper/scripts/canbus_query.py can0
-canbus_uuid: 1929c14acd7c
+canbus_uuid: a5cfd06f9bf0
 
-[adxl345]
-cs_pin: EBBCan0: PB12
-spi_software_sclk_pin: EBBCan0: PB10
-spi_software_mosi_pin: EBBCan0: PB11
-spi_software_miso_pin: EBBCan0: PB2
-axes_map: x,y,z
+# [adxl345]
+# cs_pin: EBBCan2:gpio1
+# spi_software_sclk_pin: EBBCan2:gpio2
+# spi_software_mosi_pin: EBBCan2:gpio0
+# spi_software_miso_pin: EBBCan2:gpio3
+# axes_map: x,-y,z
 
-[resonance_tester]
-probe_points: 175, 175, 20
-accel_chip: adxl345
+# [resonance_tester]
+# probe_points: 175, 175, 20
+# accel_chip: adxl345
 
 #####################################################################
 ##	                 Temperature Monitoring
 #####################################################################
-[temperature_sensor T0]
+[temperature_sensor T2]
 sensor_type: Generic 3950
-sensor_pin: EBBCan0: PA2
+sensor_pin: EBBCan2:gpio28
 
 #####################################################################
 ##                  Extruder motor
 #####################################################################
-[extruder]
-step_pin: EBBCan0: PD0
-dir_pin: EBBCan0: PD1
-enable_pin: !EBBCan0: PD2
+[extruder2]
+step_pin: EBBCan2:gpio18
+dir_pin: !EBBCan2:gpio19
+enable_pin: !EBBCan2:gpio17
 
 full_steps_per_rotation: 200  # Number of pulses required for a single motor revolution (1.8 degree motor: 200, 0.9 degree motor: 400)
 microsteps: 16
@@ -39,10 +39,10 @@ microsteps: 16
 ##	New value = old value x (actual extrusion length / target length)
 ##  	22.6789511 is a value that we recommend
 gear_ratio: 50:10
-rotation_distance: 21.6261675
+rotation_distance: 22.383083362
 nozzle_diameter: 0.400
 filament_diameter: 1.750
-heater_pin: EBBCan0: PB13
+heater_pin: EBBCan2:gpio7
 
 min_extrude_temp: 170                 # Minimum extrusion temperature
 pressure_advance: 0.035               # Propulsion pressure - try to keep pressure below 1.0
@@ -50,7 +50,7 @@ pressure_advance_smooth_time: 0.040   # Smooth advance time - default value is 0
 min_temp: 0                           #<-- important
 max_temp: 300                         #<-- important
 
-# # Nozzle Temperature PID Calibration Command:  "PID_CALIBRATE HEATER=extruder TARGET=245"
+# # Nozzle Temperature PID Calibration Command:  PID_CALIBRATE HEATER=extruder2 TARGET=245
 # control = pid
 # pid_kp = 35.688
 # pid_ki = 4.032
@@ -58,40 +58,47 @@ max_temp: 300                         #<-- important
 
 max_extrude_cross_section: 5
 
-sensor_type: ATC Semitec 104NT-4-R025H42G
-sensor_pin: EBBCan0: PA3
+sensor_type: MAX31865
+sensor_pin: EBBCan2:gpio9
+spi_software_sclk_pin: EBBCan2:gpio10
+spi_software_mosi_pin: EBBCan2:gpio8
+spi_software_miso_pin: EBBCan2:gpio11
+rtd_nominal_r: 100
+rtd_reference_r: 430
+rtd_num_of_wires: 2
 
-[tmc2209 extruder]
-uart_pin: EBBCan0: PA15
+
+[tmc2209 extruder2]
+uart_pin: EBBCan2:gpio20
 run_current: 0.550
 stealthchop_threshold: 999999
 
 #--------------------------------------------------------------------
-[verify_heater extruder]   # Heating Block Temperature Tolerance Configuration
-max_error: 120             # maximum error
-check_gain_time:120        # tolerance time
-hysteresis: 50             # tolerance temperature
-heating_gain: 2            # Heating Gain
+[verify_heater extruder2]   # Heating Block Temperature Tolerance Configuration
+max_error: 120              # maximum error
+check_gain_time:120         # tolerance time
+hysteresis: 50              # tolerance temperature
+heating_gain: 2             # Heating Gain
 
 #####################################################################
 #                  FAN
 #####################################################################
-[multi_fan T0_partfan]
-pin: EBBCan0: PA1
+[multi_fan T2_partfan]
+pin: EBBCan2:gpio13
 kick_start_time: 0.5
 off_below: 0.10
 
 #--------------------------------------------------------------------
-[heater_fan T0_hotend_fan]
-pin: EBBCan0: PA0
-heater: extruder
+[heater_fan T2_hotend_fan]
+pin: EBBCan2:gpio14
+heater: extruder2
 heater_temp: 50.0
 
 #####################################################################
 #                            RGB-LEDlight
 #####################################################################
-[neopixel T0_hotend_rgb]
-pin: EBBCan0:PD3
+[neopixel T2_hotend_rgb]
+pin: EBBCan2:gpio16
 chain_count: 3               # Number of lamp beads
 color_order: GRB             # colour sequence
 initial_RED: 0.5             # Initial red brightness
@@ -102,13 +109,13 @@ initial_BLUE: 0.5            # Initial blue brightness
 #                        Homing and Gantry Adjustment
 #####################################################################
 ## NPN and PNP proximity switch types can be set by jumper, 24V
-[tool_probe T0]
-pin: EBBCan0:PB5
-tool:0
-x_offset: 0     			  # X-axis - sensor offset relative to the nozzle
-y_offset: 0     			  # Y-axis - sensor offset relative to the nozzle
-# z_offset: 0                 # Z-axis - sensor offset relative to the nozzle 
-                              # You'll need to manually calibrate the probe's Z offset by using "PROBE_CALIBRATE"
+[tool_probe T2]
+pin: EBBCan2:gpio6
+tool:2
+# x_offset: 0     		       # X-axis - sensor offset relative to the nozzle
+# y_offset: 0     		       # Y-axis - sensor offset relative to the nozzle
+# z_offset: 0                  # Z-axis - sensor offset relative to the nozzle
+                              # You'll need to manually calibrate the probe's Z offset by using "PROBE_CALIBRATE"                          
 speed: 7.0                    # Levelling speed
 samples: 4                    # sampling frequency
 samples_result: median        # Value type (default median)
@@ -118,39 +125,34 @@ samples_tolerance_retries: 10 # Number of out-of-tolerance retries
 
 ##-----------Reduce nozzle temperature for gantry levelling-------##
 activate_gcode:
-    _TAP_PROBE_ACTIVATE HEATER=extruder
+    _TAP_PROBE_ACTIVATE HEATER=extruder2
 
 #####################################################################
 #                        Toolhead Select Macro
 #####################################################################
-[gcode_macro T0]
+[gcode_macro T2]
 variable_color: ""
 variable_material: 0
-# Note for "material" variable:
-# 0 = Irelevant
-# 1 = PLA
-# 2 = PETG
-# 3 = ABS
 gcode:
-    SELECT_TOOL T=0
-    
+    SELECT_TOOL T=2
+
 #####################################################################
 #                        Toolhead parameters
 #####################################################################
-[tool T0]
-tool_number: 0
-extruder: extruder
-fan: multi_fan T0_partfan
-gcode_x_offset: 0
-gcode_y_offset: 0
-gcode_z_offset: 0
-params_park_x: 14.50
+[tool T2]
+tool_number: 2
+extruder: extruder2
+fan: multi_fan T2_partfan
+# gcode_x_offset: 0
+# gcode_y_offset: 0
+# gcode_z_offset: 0
+params_park_x: 259.25
 params_park_y: 85.50
 params_park_z: 250.0
 
-params_input_shaper_type_x: 'zv'
-params_input_shaper_freq_x: 43.200
+params_input_shaper_type_x: '3hump_ei'
+params_input_shaper_freq_x: 80.400
 params_input_shaper_damping_ratio_x: 0.100000
-params_input_shaper_type_y: 'mzv'
-params_input_shaper_freq_y: 26.600
+params_input_shaper_type_y: 'ei'
+params_input_shaper_freq_y: 36.400
 params_input_shaper_damping_ratio_y: 0.100000
