--- a/STL_Config_Instructions/v1.1 - Alpha/Klipper_Config/macro-testing.cfg
+++ b/STL_Config_Instructions/v1.1 - Alpha/Klipper_Config/macro-testing.cfg
@@ -24,7 +24,7 @@ gcode:
 
     {action_respond_info(out|join("\n"))}
 
-# #--------------------------------------------------------------------
+#--------------------------------------------------------------------
 [gcode_macro A_DOCKING_TEST]
 gcode:
     {% if "xyz" not in printer.toolhead.homed_axes %}
@@ -32,10 +32,70 @@ gcode:
     {% endif %}
     {% if printer['quad_gantry_level'].applied == False %}
         QUAD_GANTRY_LEVEL
+        G28
     {% endif %}
     TEST_TOOL_DOCKING
+
+#--------------------------------------------------------------------
+[gcode_macro _A_TC_RELIABILITY_TEST_LAYER_CHANGE]
+gcode:
+    {% if (printer.toolhead.position[2]|float + 0.2) < printer['toolchanger'].params_max_z|float %}
+        G91
+        G0 Z0.2 F1000
+        G90
+    {% else %}
+        G90
+        G0 Z1.0 F9000
+    {% endif %}
+    M400
+    RESPOND TYPE=echo MSG='Height: {printer.toolhead.position[2]|round(2, 'common')}mm ...'
+    
+#--------------------------------------------------------------------
+[gcode_macro A_TC_RELIABILITY_TEST]
+variable_tcno: 50
+# variable_tcno: 1250      # 1 tool-change at every layer until z=250mm
+variable_noth: 3         # 3 tool-heads
+gcode:
+    ## Set up gantry ------------------------------------------------
+    {% if "xyz" not in printer.toolhead.homed_axes %}
+        G28
+    {% endif %}
+    {% if printer['quad_gantry_level'].applied == False %}
+        QUAD_GANTRY_LEVEL
+        G28
+    {% endif %}
+    G90
+    G0 Z0.2 F9000
+    
+    ## Testing ------------------------------------------------------
+    {% set tcnr = (tcno*noth*1.1)|int %}                                       # set the number of tool-changes to be run
+    RESPOND TYPE=echo MSG='Test {tcnr} tool-changes...'
+    
+    {% for n in range(tcnr) %}
+        {% set nr = printer.toolchanger.tool_numbers|random %}                 # Set a random tool to pickup.
+        
+        _A_TC_RELIABILITY_TEST_LAYER_CHANGE
+        RESPOND TYPE=echo MSG='Changer no.: {n} ...'
+
+        {% if nr == printer['toolchanger'].tool_number %}                      # If the random tool selected is the active tool,
+            TEST_TOOL_DOCKING                                                  # then just test that dock.
+        {% else %}                                                             # Otherwise,
+            T{ nr }                                                            # pick up the random tool.
+        {% endif %}
+    {% endfor %}
+
+    T0
+    G1 X{printer['gcode_macro _home'].xh} Y{printer['gcode_macro _home'].yh} F9000
+    
+    ## End note -----------------------------------------------------
+    M400
+    RESPOND TYPE=echo MSG='Reliability test cleared. CONGRATULATION'
 
 # #--------------------------------------------------------------------
 # [gcode_macro TEST]
 # gcode:
-#     RESPOND TYPE=echo MSG='Change No.: {printer.tool_probe_endstop.active_tool_number} ...'
+#     {% if printer['gcode_macro _global_variable'].thermo_expand_temp_low != 0 %}
+#         RESPOND TYPE=echo MSG='Testing'
+#     {% endif %}
+    
+    
