--- a/STL_Config_Instructions/v1.1 - Alpha/Klipper_Config/printer.cfg
+++ b/STL_Config_Instructions/v1.1 - Alpha/Klipper_Config/printer.cfg
@@ -2,11 +2,32 @@
 
 [include toolchanger.cfg]
 [include toolchanger-homing.cfg]
-[include toolchanger-calibrate_offsets.cfg]
+[include toolchanger-calibrate.cfg]
 
-[include macro-general_0.cfg]
-[include macro-general_1.cfg]
+[include macro-general.cfg]
+[include macro-print.cfg]
 [include macro-testing.cfg]
+
+####################################################################################
+##	                         Global Variables
+####################################################################################
+[gcode_macro _global_variable]
+description: Global variables that is used through out the configs
+variable_calibration_probe_x: 241.76         # X aproximate position of the Nudge probe. CHANGE TO MATCH YOUR SET-UP
+variable_calibration_probe_y: 330.28         # Y aproximate position of the Nudge probe. CHANGE TO MATCH YOUR SET-UP
+variable_calibration_safe_z: 60.00           # Z aproximate safe position of the Nudge probe. KEEP CONSERVATIVE TO AVOID COLLISION
+variable_clean_dock_x: 175                   # X aproximate position of the cleaning dock. CHANGE TO MATCH YOUR SET-UP. Set to "0" to disable
+variable_clean_temp: 200                     # Nozzle clean temperature
+variable_clean_threshold: 150.0              # The minimum perimeter of the print, below which the printing material will not be considered
+variable_heatsoak_temp: 45                   # Chamber temperature target for heat soak. REQUIRES [temperature_sensor Chamber] below. Set to "0" to disable
+variable_printing: 0                         # Printing indicator
+variable_skew_compensation: 1                # "0" to disable, "1" to enable
+variable_thermo_expand_offset: -0.080        # Maximum z offset for thermal expansion compensation. REQUIRES [temperature_sensor Chamber] below
+variable_thermo_expand_temp_high: 50         # Chamber temp to apply maximum z offset for thermal expansion compensation. REQUIRES [temperature_sensor Chamber]
+variable_thermo_expand_temp_low: 35          # Chamber temp start applying thermal expansion compensation. REQUIRES [temperature_sensor Chamber]. Set to "0" to disable
+variable_wipe_x: 0.0                         # Wipe tower x position
+variable_wipe_y: 0.0                         # Wipe tower y position
+gcode:                                       # This is here to appease klipper
 
 ####################################################################################
 ## 	                MCU
@@ -18,12 +39,12 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_0C0035001150535556323420-if00
 ##                     Model and acceleration
 ####################################################################################
 [printer]
-kinematics: corexy           # Printer type：corexy
-max_velocity: 300            # Maximum speed (max. 300)
-max_accel: 10000             # Maximum acceleration (max. 4000)
-max_z_velocity: 20           # Z-axis maximum speed
-max_z_accel: 250             # Z-axis maximum acceleration
-square_corner_velocity: 5.0  # Square corner speed
+kinematics: corexy                           # Printer type：corexy
+max_velocity: 300                            # Maximum speed (max. 300)
+max_accel: 10000                             # Maximum acceleration (max. 4000)
+max_z_velocity: 20                           # Z-axis maximum speed
+max_z_accel: 250                             # Z-axis maximum acceleration
+square_corner_velocity: 5.0                  # Square corner speed
 
 ####################################################################################
 ##	                 Temperature Monitoring
@@ -74,7 +95,6 @@ run_current: 0.8
 ####################################################################################
 ##                   Y-axis on MOTOR_1(A Motor)
 ####################################################################################
-
 [stepper_y]
 step_pin: PG0                 # Y-axis motor pulse pin setting
 dir_pin: !PG1                 # Y-axis motor direction pin setting
@@ -116,7 +136,7 @@ enable_pin: !PG5                        # Z-axis motor enable pin setting
 rotation_distance: 40                   # Active pulley circumference mm (2GT-20T pulley 40, 2GT-16T pulley 32)
 gear_ratio: 80:16                       # reduction ratio
 microsteps: 16                          # microsteps
-endstop_pin: probe:z_virtual_endstop    # PG10          # Limit switch interface
+endstop_pin: probe:z_virtual_endstop    # Limit switch interface
 
 ##  position_endstop is the distance of the Z limit pin trigger point from the print surface.
 ##  Positive value = above the termination point of the platform，
@@ -129,6 +149,7 @@ position_min: -5               # Soft Limit Minimum Stroke
 homing_speed: 10               # Reset speed - maximum 20
 second_homing_speed: 3         # Secondary reset speed - maximum 10
 homing_retract_dist: 3         # Retreat distance
+
 #--------------------------------------------------------------------
 [tmc2209 stepper_z]        # TMC2209
 uart_pin: PC6              # drive communications port
@@ -156,7 +177,7 @@ hold_current: 0.7          # holding current(mA)
 sense_resistor: 0.110      # Do not change the drive sampling resistor
 stealthchop_threshold: 200 # Mute threshold
 
-#--------------------------------------------------------------------#
+#--------------------------------------------------------------------
 ##		Z2-axis on MOTOR4(right-rear)
 [stepper_z2]
 step_pin: PF9              # Z2-axis motor pulse pin
@@ -174,7 +195,7 @@ hold_current: 0.7          # holding current(mA)
 sense_resistor: 0.110      # Do not change the drive sampling resistor
 stealthchop_threshold: 200 # Mute threshold
 
-#--------------------------------------------------------------------#
+#--------------------------------------------------------------------
 ##		Z3-axis on MOTOR5(right-front)
 [stepper_z3]
 step_pin: PC13             # Z3-axis motor pulse pin
@@ -210,7 +231,7 @@ max_power: 1.0
 #pid_kd: 363.769
 
 ####################################################################################
-#                  FAN
+##                  FAN
 ####################################################################################
 [heater_fan controller_fan_1] # Skirt fan 1
 pin: PE5                      # FAN-2
@@ -230,42 +251,52 @@ heater_temp: 50               # How many degrees does the heat bed reach to acti
 fan_speed: 0.5                # Fan speed
 
 #--------------------------------------------------------------------
-[heater_fan Nevermore] # Skirt fan 2
+[fan_generic fan_nevermore_stealthmax]
+pin: PD13
+max_power: 1.0
+shutdown_speed: 0.0
+cycle_time: 0.010
+hardware_pwm: False
+kick_start_time: 0.100
+off_below: 0.05
+
+#--------------------------------------------------------------------
+[fan_generic fan_chamber_heater]
 pin: PA8
-shutdown_speed: 0.0           # Closing speed (Please do not change)
-kick_start_time: 0.5          # start-up time (Please do not change)
-heater: heater_bed            # Related equipment: heater_bed
-heater_temp: 90               # How many degrees does the heat bed reach to activate the fan
-fan_speed: 1.0                # Fan speed
+max_power: 1.0
+shutdown_speed: 0.0
+cycle_time: 0.010
+hardware_pwm: False
+kick_start_time: 0.100
+off_below: 0.05
 
 ####################################################################################
-#                            RGB-LEDlight
+##                            RGB-LEDlight
 ####################################################################################
 [output_pin daylight]
 pin: PB11
 pwm: True
-cycle_time: 0.01
+shutdown_value: 0.0
+cycle_time: 0.010
+hardware_pwm: False
 
 ####################################################################################
-#                          Idle off hot bed
+##                          Idle off hot bed
 ####################################################################################
 [idle_timeout]
-timeout: 1800                # The hot bed is switched off if the idle time exceeds 30 minutes
+timeout: 1800                       # The hot bed is switched off if the idle time exceeds 30 minutes
 
 ####################################################################################
-#	                         Firmware Retraction
+##	                         Firmware Retraction
 ####################################################################################
 [firmware_retraction]
-#   The length of filament (in mm) to retract when G10 is activated,
-#   and to unretract when G11 is activated (but see
-#   unretract_extra_length below). The default is 0 mm.
-retract_length: 10
-retract_speed: 20                 # The speed of retraction, in mm/s. The default is 20 mm/s.
-unretract_extra_length: 10        # The length (in mm) of *additional* filament to add when unretracting.
-unretract_speed: 10               # The speed of unretraction, in mm/s. The default is 10 mm/s.
+retract_length: 10                  # The length of filament (in mm) to retract when G10 is activated, and to unretract when G11 is activated
+retract_speed: 20                   # The speed of retraction, in mm/s. The default is 20 mm/s.
+unretract_extra_length: 1           # The length (in mm) of *additional* filament to add when unretracting.
+unretract_speed: 10                 # The speed of unretraction, in mm/s. The default is 10 mm/s.
 
 ####################################################################################
-#	                         Board Pins
+##	                         Board Pins
 ####################################################################################
 [board_pins]
 aliases:
@@ -284,34 +315,37 @@ aliases:
     EXP2_9=<GND>, EXP2_10=PC5
 
 ####################################################################################
-#	                             Others
+##	                         Others
 ####################################################################################
+[skew_correction]
+[exclude_object]
+[input_shaper]
+[config_switch]
 [display_status]
 [pause_resume]
 [virtual_sdcard]
 path: ~/printer_data/gcodes
 
-[exclude_object]
-[input_shaper]
-[config_switch]
-
 ####################################################################################
-#                          Session Variables
+##                          Session Variables
 ####################################################################################
-#;<------------------------------------------------------------------
-[include macro-print-single.cfg]
+#;<    # Section Variable marker
+#---------------------------------------------------------------
+[include toolchanger-nozzle_clean.cfg]
 [include ./T0-SB2209-Revo-LDO.cfg]
-#--------------------------------------------------------------------
+[include ./T1-SB2209-Revo-LDO.cfg]
+[include ./T2-RP2040-Dragon-Step.cfg]
+#---------------------------------------------------------------
 [bed_mesh]
 speed: 200                   # Calibration speed
 horizontal_move_z: 10        # Z-axis movement speed
-mesh_min: 30,30              # Minimum calibration point coordinates x, y
-mesh_max: 320, 320           # Maximum calibration point coordinates x, y  #350mm=320,320
+mesh_min: 30,130             # Minimum calibration point coordinates x, y
+mesh_max: 320, 320           # Maximum calibration point coordinates x, y. 350mm=320,320
 probe_count: 11,11           # Number of sampling points (7X7 is 49 points)
 mesh_pps: 2,2                # Number of supplementary sampling points
 algorithm: bicubic           # algorithmic model
 bicubic_tension: 0.2         # Algorithmic interpolation don't move
-#--------------------------------------------------------------------
+#---------------------------------------------------------------
 [quad_gantry_level]
 #	Gantry Corners for 350mm Build
 gantry_corners:
@@ -319,46 +353,34 @@ gantry_corners:
 	410,420
 #  Probe points
 points:
-	50,50
+	50,130
 	50,300
 	300,300
-	300,50
+	300,130
 
-speed: 150                          # Levelling speed
-horizontal_move_z: 15               # Z-axis starting height
-retries: 10                         # Number of out-of-tolerance retries
-retry_tolerance: 0.0075             # Sampling tolerance
-max_adjust: 20                      # Maximum adjustment stroke for levelling
-#--------------------------------------------------------------------
+speed: 150                   # Levelling speed
+horizontal_move_z: 15        # Z-axis starting height
+retries: 10                  # Number of out-of-tolerance retries
+retry_tolerance: 0.0075      # Sampling tolerance
+max_adjust: 20               # Maximum adjustment stroke for levelling
+#---------------------------------------------------------------
 [gcode_macro _home]
 variable_xh: 175.0
-variable_yh: 175.0
-variable_zh: 10.0
-variable_dock: False
+variable_yh: 235.0
+variable_safe_z: 60.0
+variable_dock: True
 gcode:
     RESPOND TYPE=echo MSG='Print area centre: {xh}, {yh}, {zh}'
     RESPOND TYPE=echo MSG='Number of TH: {no_of_toolhead}'
-
-#--------------------------------------------------------------------
-[gcode_macro _WIPE_TOWER_LOCATION]
-variable_wx: 0.0
-variable_wy: 0.0
-gcode:
-    RESPOND TYPE=echo MSG="WIPE_TOWER_X = {wx}"
-    RESPOND TYPE=echo MSG="WIPE_TOWER_Y = {wy}"
-
-####################################################################################
-#	                         SAVES
-####################################################################################
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
 #*# [heater_bed]
 #*# control = pid
-#*# pid_kp = 60.558
-#*# pid_ki = 1.960
-#*# pid_kd = 467.814
+#*# pid_kp = 59.623
+#*# pid_ki = 2.092
+#*# pid_kd = 424.814
 #*#
 #*# [bed_mesh full_bed]
 #*# version = 1
@@ -385,6 +407,11 @@ gcode:
 #*# algo = bicubic
 #*# tension = 0.2
 #*#
+#*# [skew_correction calilantern_skew_profile]
+#*# xy_skew = -0.0012303699021260727
+#*# xz_skew = -0.0014000762519187871
+#*# yz_skew = -0.00016263442893086832
+#*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
@@ -403,7 +430,7 @@ gcode:
 #*# max_y = 200.47
 #*#
 #*# [tool_probe T0]
-#*# z_offset = -0.692500
+#*# z_offset = -0.932500
 #*#
 #*# [extruder]
 #*# control = pid
@@ -411,3 +438,30 @@ gcode:
 #*# pid_ki = 4.284
 #*# pid_kd = 75.574
 #*#
+#*# [tool T1]
+#*# gcode_x_offset = 0.112500
+#*# gcode_y_offset = 0.284375
+#*# gcode_z_offset = 0.367500
+#*#
+#*# [tool_probe T1]
+#*# z_offset = -0.777500
+#*#
+#*# [extruder1]
+#*# control = pid
+#*# pid_kp = 33.912
+#*# pid_ki = 3.325
+#*# pid_kd = 86.477
+#*#
+#*# [tool T2]
+#*# gcode_x_offset = 0.137500
+#*# gcode_y_offset = 0.578125
+#*# gcode_z_offset = 0.545000
+#*#
+#*# [tool_probe T2]
+#*# z_offset = -1.277500
+#*#
+#*# [extruder2]
+#*# control = pid
+#*# pid_kp = 27.329
+#*# pid_ki = 1.804
+#*# pid_kd = 103.505
