--- a/STL_Config_Instructions/v1.1 - Alpha/Klipper_Config/toolchanger-calibrate.cfg
+++ b/STL_Config_Instructions/v1.1 - Alpha/Klipper_Config/toolchanger-calibrate.cfg
@@ -14,8 +14,7 @@ samples_result: median       # median, average
 sample_retract_dist:1
 samples_tolerance:0.01       # UPDATE THIS WITH YOUR PRINTER
 samples_tolerance_retries:10
-# trigger_to_bottom_z: 1.750   # Decrease -> higher nozzle (Open frame)
-trigger_to_bottom_z: 1.900   # Decrease -> higher nozzle (Heated Chamber)
+trigger_to_bottom_z: 1.775   # Decrease -> higher nozzle
 
 #####################################################################
 #                        Hidden
@@ -23,9 +22,12 @@ trigger_to_bottom_z: 1.900   # Decrease -> higher nozzle (Heated Chamber)
 [gcode_macro _CALIBRATE_MOVE_OVER_PROBE]
 description: Tool offsets calibration
 gcode:
+    {% set safe_z = printer['gcode_macro _global_variable'].calibration_safe_z %}
+    {% set probe_x = printer['gcode_macro _global_variable'].calibration_probe_x %}
+    {% set probe_y = printer['gcode_macro _global_variable'].calibration_probe_y %}
     BED_MESH_CLEAR
-    G0 Z50 F9000                # UPDATE THIS WITH YOUR POSITION. Make sure that the nozzle is not touching the probe.
-    G0 X241.76 Y330.28 F9000    # UPDATE THIS WITH YOUR POSITION
+    G0 Z{safe_z} F9000
+    G0 X{probe_x} Y{probe_y}
     
 [gcode_macro _CALIBRATE_OFFSETS]
 gcode:
@@ -64,8 +66,7 @@ gcode:
         # Finish up
         TURN_OFF_HEATERS
         SELECT_TOOL T={tools[0]}
-        G1 Y125 F9000
-        G1 X175 Y235 F9000
+        G1 X{printer['gcode_macro _home'].xh} Y{printer['gcode_macro _home'].yh} F9000
     {% else %}
         {% if printer['quad_gantry_level'].applied == False %}
             RESPOND TYPE=error MSG='Gantry is not LEVELED...'
@@ -117,7 +118,9 @@ gcode:
 [gcode_macro CALIBRATE_NPO]
 description: Nozzle probe offset calibration
 gcode:
+    {% set safe_z = printer['gcode_macro _global_variable'].calibration_safe_z %}
     _CPI_CHECK
     _CPI_CHECK
     _CALIBRATE_NPO
+    G0 Z{safe_z} F9000
     
