--- a/STL_Config_Instructions/v1.1 - Alpha/Klipper_Config/toolchanger-homing.cfg
+++ b/STL_Config_Instructions/v1.1 - Alpha/Klipper_Config/toolchanger-homing.cfg
@@ -13,6 +13,7 @@ gcode:
     ## Set up variables
     {% set center_x = printer["gcode_macro _home"].xh|float %}
     {% set center_y = printer["gcode_macro _home"].yh|float %}
+    {% set safe_z = printer["gcode_macro _home"].safe_z|float %}
     {% set cur_z = printer.toolhead.position[2]|float %}
 
     ##  Engage trigger variables according to the input
@@ -37,7 +38,7 @@ gcode:
         {% if "z" in printer.toolhead.homed_axes %}                               # If z is already homed
             {% if printer.toolhead.position[2] < printer['toolchanger'].params_min_z %}
                 RESPOND TYPE=echo MSG='Nozzle Clearance...'
-                G0 Z{printer['toolchanger'].params_min_z|float} F1500
+                G0 Z{safe_z} F1500
             {% endif %}
             {% if printer.toolhead.position[2] > printer['toolchanger'].params_max_z %}
                 RESPOND TYPE=echo MSG='Umbilical Clearance...'
@@ -50,7 +51,7 @@ gcode:
             G28 Z                                                                 # temporary home z
             M400
             RESPOND TYPE=echo MSG='Nozzle Clearance...'
-            G1 Z{printer['toolchanger'].params_min_z|float} F1500                 # Move Z up off the bed
+            G1 Z{safe_z} F1500                 # Move Z up off the bed
         {% endif %}
     {% endif %}
     
