--- a/STL_Config_Instructions/v1.1 - Alpha/Klipper_Config/toolchanger-calibrate.cfg
+++ b/STL_Config_Instructions/v1.1 - Alpha/Klipper_Config/toolchanger-calibrate.cfg
@@ -19,6 +19,7 @@ trigger_to_bottom_z: 1.775   # Decrease -> higher nozzle
 #####################################################################
 #                        Hidden
 #####################################################################
+#--------------------------------------------------------------------
 [gcode_macro _CALIBRATE_MOVE_OVER_PROBE]
 description: Tool offsets calibration
 gcode:
@@ -29,6 +30,7 @@ gcode:
     G0 Z{safe_z} F9000
     G0 X{probe_x} Y{probe_y}
     
+#--------------------------------------------------------------------
 [gcode_macro _CALIBRATE_OFFSETS]
 gcode:
     {% set tools = printer.toolchanger.tool_numbers %}
@@ -103,9 +105,11 @@ gcode:
 #####################################################################
 #                        Working
 #####################################################################
+#--------------------------------------------------------------------
 [gcode_macro CALIBRATE_OFFSETS]
 description: Tool offsets calibration
 gcode:
+    ## This macro done as such to overcomes some Klipper macro variable quirk
     _CPI_CHECK
     _CPI_CHECK
     {% if params.TOOL != null%}
@@ -119,6 +123,7 @@ gcode:
 description: Nozzle probe offset calibration
 gcode:
     {% set safe_z = printer['gcode_macro _global_variable'].calibration_safe_z %}
+    ## This macro done as such to overcomes some Klipper macro variable quirk
     _CPI_CHECK
     _CPI_CHECK
     _CALIBRATE_NPO
