--- a/STL_Config_Instructions/v1.1 - Alpha/Klipper_Config/toolchanger.cfg
+++ b/STL_Config_Instructions/v1.1 - Alpha/Klipper_Config/toolchanger.cfg
@@ -1,25 +1,17 @@
 #--------------------------------------------------------------------
-[tool_probe_endstop]
-crash_gcode:
-    {% if printer["gcode_macro _global_variable"].printing|int == 1 %}
-        RESPOND TYPE=error MSG='Tool not detected, expected {printer.toolchanger.tool_number}. Pausing the print.'
-        BASE_PAUSE
-    {% else %}
-        RESPOND TYPE=error MSG='Tool not detected, expected {printer.toolchanger.tool_number}'
-    {% endif %}
-    TURN_OFF_HEATERS
-
-#--------------------------------------------------------------------
 [toolchanger]
-t_command_restore_axis: Z
-params_safe_y: 120
-params_close_y: 50
-params_min_z: 40
-params_max_z: 240
-params_fast_speed: 30000   # Speed conversion:
-params_path_speed: 7000    # 1500=40mm/s
+t_command_restore_axis: Z    # The axis to restore, by default
+params_safe_y: 120           # The closest toward the front that the toolhead can go without coliding with the docked toolhead(s)
+params_close_y: 50           # The closest toward the front that the toolhead-carrier can go without coliding with the docked toolhead(s)
+params_min_z: 40             # The lowest z position that tool-changing can happen
+params_max_z: 240            # The highest z position that tool-changing can happen
+params_fast_speed: 30000     # (1500 = 40mm/s) The speed to travel to the first point in the tool-change path
+params_path_speed: 7000      # (1500 = 40mm/s) The max speed to travel during the tool-change path
 
 params_type = 'sb_misschanger'
+## 'x'/'y' is the relative position, to the the starting position of the tool path for the toolhead
+## 'f' is the fraction of the path-speed to travel to the point
+## 'd' indicate whether the path is relevant during drop-off. "0" is no, "1" is yes
 params_sb_misschanger_path: [
                              {'x':0,        'y':0,       'f':1.00,    'd':1},
                              {'x':0,        'y':-50,     'f':0.80,    'd':1},
@@ -173,6 +165,17 @@ pickup_gcode:
         {% endif %}
     {% endif %}
 
+#--------------------------------------------------------------------
+[tool_probe_endstop]
+crash_gcode:
+    {% if printer["gcode_macro _global_variable"].printing|int == 1 %}
+        RESPOND TYPE=error MSG='Tool not detected, expected {printer.toolchanger.tool_number}. Pausing the print.'
+        BASE_PAUSE
+    {% else %}
+        RESPOND TYPE=error MSG='Tool not detected, expected {printer.toolchanger.tool_number}'
+    {% endif %}
+    TURN_OFF_HEATERS
+    
 ####################################################################################
 #                        Marcos overwrite
 ####################################################################################
@@ -231,7 +234,7 @@ gcode:
 description: check calibration probe and initialse toolhead before QGL
 rename_existing: _QUAD_GANTRY_LEVEL
 gcode:
-    ## This macro done as such to overcomes some Klipper macro variable quirk.
+    ## This macro done as such to overcomes some Klipper macro variable quirk
     _CPI_CHECK
     _QGL
 
